--- a/views/film.ejs
+++ b/views/film.ejs
@@ -2,9 +2,30 @@
 <html>
 	<head>
 		<title>Pagina Film</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	
 	<body>
+		<div class="container-menu">
+			<h1>TITOLO PROGETTO</h1>
+			<nav id="primary_nav_wrap">
+			<ul>
+  				<li class="current-menu-item"><a href="#">Home</a></li>
+  				<li><a href="#">Voce menu</a>
+    			<ul>
+      				<li><a href="#">Sub Menu 1</a></li>
+      				<li><a href="#">Sub Menu 2</a></li>
+      				<li><a href="#">Sub Menu 3</a></li>
+      				<li><a href="#">Sub Menu 4</a></li>
+      				<li><a href="#">Sub Menu 5</a></li>
+    			</ul>
+  				</li>
+   				<li class=""><a href="#">Altra voce menu</a></li>
+
+			</ul>
+			</nav>
+		</div>
 		<div class="Lightbox-gallery">
 			<div>
 				<h1> <%=title%> </h1>
