--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Login</title>
-</head>
-<body>
-Questa è la pagina di login
-</body>
+	<head>
+		<title>Titolo Progetto</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/main.js"></script>
+	</head>
+
+	<body>
+		<div class="container-menu">
+			<h1>TITOLO PROGETTO</h1>
+			<nav id="primary_nav_wrap">
+			<ul>
+  				<li class="current-menu-item"><a href="#">Home</a></li>
+  				<li><a href="#">Voce menu</a>
+    			<ul>
+      				<li><a href="#">Sub Menu 1</a></li>
+      				<li><a href="#">Sub Menu 2</a></li>
+      				<li><a href="#">Sub Menu 3</a></li>
+      				<li><a href="#">Sub Menu 4</a></li>
+      				<li><a href="#">Sub Menu 5</a></li>
+    			</ul>
+  				</li>
+   				<li class=""><a href="#">Altra voce menu</a></li>
+
+			</ul>
+			</nav>
+		</div>
+
+		<div>
+
+			<a href="/auth/google">Sign In with Google</a>
+		<!-- LOGIN FORM 
+		<form action="/login" method="post">
+			<div class="form-group">
+				<label>Email</label>
+				<input type="text" class="form-control" name="email">
+			</div>
+			<div class="form-group">
+				<label> Password</label>
+				<input type="password" class="form-control" name="password">
+			</div>
+					
+			<button type="submit" class="btn btn-warning btn-lg">Login</button>
+		</form>	
+		</div>		-->
+		<hr>
+		<p>Non hai un Account? <a href="/signup">Signup</a></p>
+		<p>Oppure torna alla <a href="/">Home</a>.</p>
+	</body>
 </html>
