--- a/views/visti.ejs
+++ b/views/visti.ejs
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>vist</title>
+	<title>FILM VISTI</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
+
 <body>
-Questa è la pagina di film visti.
+	<div class="container-menu">
+		<h1>TITOLO PROGETTO</h1>
+		<nav id="primary_nav_wrap">
+			<ul>
+  				<li class="current-menu-item"><a href="/">Home</a></li>
+  				<li><a href="/visti">Film Visti</a>
+  				<li class=""><a href="/search">Search</a></li>
+			</ul>
+		</nav>
+	</div>
+
+	<div class="container">
+		<div class="lightbox-gallery">
+
+			<% for(var i=0; i<User.films_seen.length; i++) { %>
+				<% if(User.films_seen[i]) { %>
+					<div> <img src=<%=User.films_seen[i].poster%> alt=<%User.films_seen[i].title%> > </div>
+				<% }else{ %> <!-- THIS STATEMENT IS NEVER REACHED. DUH. -->
+					<div> Choose a film </div>
+				<% } %>
+			<% } %>
+
+		</div>
+	</div>
 </body>
+
 </html>
