--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>LOGIN</title>
+		<title>Login</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
-
+	
 	<body>
-	<div class="container-menu">
-<h1>TITOLO PROGETTO</h1>
-<nav id="primary_nav_wrap">
-<ul>
-  <li class="current-menu-item"><a href="/">Home</a></li>
-  <li><a href="/visti">Film Visti</a>
-  <li class=""><a href="/search">Search</a></li>
-
-</ul>
-</nav>
-</div>
-
+	
+		<div class="container-menu">
+			<h1>Filmaniac</h1>
+			<nav id="primary_nav_wrap">
+				<ul>
+  					<li class="current-menu-item"><a href="/">Home</a></li>
+  					<li><a href="/visti">Films Seen</a>
+  					<li class=""><a href="/search">Search</a></li>
+				</ul>
+			</nav>
+		</div>	
 
 		<div>
 
 			<a href="/auth/google">Sign In with Google</a>
-		<!-- LOGIN FORM 
-		<form action="/login" method="post">
-			<div class="form-group">
-				<label>Email</label>
-				<input type="text" class="form-control" name="email">
-			</div>
-			<div class="form-group">
-				<label> Password</label>
-				<input type="password" class="form-control" name="password">
-			</div>
-					
-			<button type="submit" class="btn btn-warning btn-lg">Login</button>
-		</form>	
-		</div>		-->
+
+		<!--
 		<hr>
 		<p>Non hai un Account? <a href="/signup">Signup</a></p>
 		<p>Oppure torna alla <a href="/">Home</a>.</p>
+		-->
+		
+		<div class="text-center github-link">
+  			<a class="github-link" href="https://github.com/humbl3man/lightboxify" target="_blank"><i class="fa fa-github"></i> Github Source Code</a>
+		</div>
+			
+		<footer>
+			Esame 2018/2019
+		</footer>
+
+
 	</body>
 </html>
