--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,9 @@ body{
 #primary_nav_wrap
 {
 	margin-top:15px;
-	background: #ccc;
+	background: lightgrey;
+  box-shadow: 0 0px 0px 0 rgba(0,0,0,0.14), 0 0px 0px 0px rgba(0,0,0,0.12), 0 0px 0px 0 rgba(0,0,0,0.2);
+
 }
 
 #primary_nav_wrap ul
@@ -78,12 +80,21 @@ body{
 {
 	display:block
 }
+.cn{
+  position: relative;
+  height: 200px;
+}
+.logOut{
+  float: right !important;
+}
 footer{
 	height: 200px;
 	color: #fff;
 	background-color: #ccc;
 	padding: 20px;
 	margin: 0;
+  position: absolute;
+  width: 100%;
 }
 .container {
   max-width: 90%;
