--- a/views/search.ejs
+++ b/views/search.ejs
@@ -12,27 +12,33 @@
 			<h1>Filmaniac</h1>
 			<nav id="primary_nav_wrap">
 				<ul>
-  					<li class="current-menu-item"><a href="/">Home</a></li>
+  					<li><a href="/">Films to See</a></li>
   					<li><a href="/visti">Films Seen</a>
-  					<li class=""><a href="/search">Search</a></li>
+  					<li><a href="/search">Search</a></li>
+				</ul>
+				<ul class="logOut">
+					<li>
+						<a href="/logout">Log out</a>
+					</li>
 				</ul>
 			</nav>
 		</div>	
-
 	
 		<div class="container">
 			<div class="jumbotron text-center">
-				<h3> Cerca un Film </h3>
+				<h3> Find a Film </h3>
 
 				<form action="/search" method="post">
 					<div class="form-group">
 						<input type="text" class="form control" name="name">
 					</div>
-					<button type="submit" class="btn btn-default btn-lg">Cerca</button>
+					<button type="submit" class="btn btn-default btn-lg">Search</button>
 				</form>
 				<br>
+
 			</div>
 		</div>
+
 		<div class="text-center github-link">
   			<a class="github-link" href="https://github.com/humbl3man/lightboxify" target="_blank"><i class="fa fa-github"></i> Github Source Code</a>
 		</div>
