--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,9 +13,9 @@
 	
 	<body>
 	
-		<div class="container-menu">
+		<div class="container-menu" style="background-color: teal">
 			<h1>Filmaniac</h1>
-			<nav id="primary_nav_wrap">
+			<nav id="primary_nav_wrap" style="background-color:inherit;">
 				<ul>
   					<li><a href="/">Films to See</a></li>
   					<li><a href="/visti">Films Seen</a>
@@ -36,7 +36,7 @@
      			</a>
 			</div>
 		</div>
-		<footer>
+		<footer style="background-color: teal">
 			Esame 2018/2019
 		</footer>
 
