--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 	
 	<body>
 	
-		<div class="container-menu">
+		<div class="container-menu" style="background-color: teal">
 			<h1>Filmaniac</h1>
 			<nav id="primary_nav_wrap">
 				<ul>
@@ -29,7 +29,7 @@
 			<h2 class="text-center">Films To See</h2>
 
 			<div class="lightbox-gallery">
-				<% for(var i=0; i<User.films_to_see.length || i==10; i++) { %>
+				<% for(var i=0; i<10; i++) { %>
 					<% if(User.films_to_see[i]) { %>
 						<div> <img src=<%=User.films_to_see[i].poster%> alt=<%User.films_to_see[i].title%> > 	</div>
 					<% } %>
@@ -43,7 +43,7 @@
   			<a class="github-link" href="https://github.com/humbl3man/lightboxify" target="_blank"><i class="fa fa-github"></i> Github Source Code</a>
 		</div>
 		
-		<footer>
+		<footer style="background-color: teal">
 			Esame 2018/2019
 		</footer>
 
