--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,7 +8,7 @@
 	
 	<body>
 	
-		<div class="container-menu">
+		<div class="container-menu" style="background-color: teal">
 			<h1>Filmaniac</h1>
 			<nav id="primary_nav_wrap">
 				<ul>
@@ -43,7 +43,7 @@
   			<a class="github-link" href="https://github.com/humbl3man/lightboxify" target="_blank"><i class="fa fa-github"></i> Github Source Code</a>
 		</div>
 			
-		<footer>
+		<footer style="background-color: teal">
 			Esame 2018/2019
 		</footer>
 
